<resources>
    <string name="app_name">Weather App</string>

    <string name="edtCity_hint">Search by City</string>

    <string name="tvCity">OK</string>

    <string name="itemToday">Today</string>
    <string name="itemTomorrow">Tomorrow</string>
    <string name="itemSevenDays">Next Seven Days</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Today_Fragment" translatable="false">Today</string>
    <string name="Tomorrow_Fragment" translatable="false">Tomorrow</string>
    <string name="SevenDays_Fragment" translatable="false">Next Seven Days</string>

    <string name="tvContry_Today" translatable="false">Hanoi,VN</string>
    <string name="tvTime_Today" translatable="false">January 7, 12:31</string>
    <string name="tvTemperature_Today" translatable="false">31</string>
    <string name="tvMetric01_Today" translatable="false">o</string>
    <string name="tvMetric02_Today" translatable="false">C</string>
    <string name="tvDescription_Today" translatable="false">mist</string>

    <string name="tvName" translatable="false">Name</string>
    <string name="tvValue" translatable="false">Value</string>


    <!-- detail weather-->
    <string name="detailWeather_minTemp">Minimum Temperature</string>
    <string name="detailWeather_maxTemp">Maximum Temperature</string>
    <string name="detailWeather_pressure">Pressure</string>
    <string name="detailWeather_humidity">Humidity</string>
    <string name="detailWeather_windSpeed">Wind Speed</string>
    <string name="detailWeather_cloud">Cloud</string>
    <string name="detailWeather_sunrise">Sunrise</string>
    <string name="detailWeather_sunset">Sunset</string>
    <string name="detailWeather_rain">Rain</string>

    <string name="timeEnglish_today">MMMM dd, hh:mm aaa</string>
    <string name="timeEnglish_tomorrow">MMMM dd, yyyy</string>


    <!--SevenNextDays-->
    <string name="tvDayOfWeek_text" translatable="false">Thursday</string>
    <string name="tvDate_text" translatable="false">01-01-2019</string>
    <string name="tvStatus_text" translatable="false">Cloud</string>
    <string name="tvMaxTemp" translatable="false">31*C</string>
    <string name="tvMinTemp" translatable="false">31*C</string>


</resources>
