<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDayOfWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tvDayOfWeek_text"
            android:textSize="@dimen/tvDayOfWeek_textSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/tvDate_text"
            android:textSize="@dimen/tvDate_textSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/tvStatus_text"
            android:textSize="@dimen/tvStatus_textSize"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgViewIcon"
            android:layout_width="@dimen/imgViewIcon_width"
            android:layout_height="@dimen/imgViewIcon_height" />

        <TextView
            android:id="@+id/tvMaxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tvMaxTemp_marginLeft"
            android:layout_marginTop="@dimen/tvMaxTemp_marginTop"
            android:text="@string/tvMaxTemp"
            android:textSize="@dimen/tvMaxTemp_textSize" />

        <TextView
            android:id="@+id/tvMinTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tvMinTemp_marginLeft"
            android:layout_marginTop="@dimen/tvMinTemp_marginTop"
            android:text="@string/tvMinTemp"
            android:textSize="@dimen/tvMinTemp_textSize" />

    </LinearLayout>

</LinearLayout>